# document-insight-engine

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  celery_worker.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  documents.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  base.py  document.py
backend/app/schemas/: __init__.py  document.py
backend/app/services/: __init__.py  document_processor.py  embeddings.py  llm_client.py  rag.py  vector_store.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DocumentUpload.jsx  InsightsDisplay.jsx  ProcessingStatus.jsx  QuestionAnswer.jsx
frontend/src/pages/: DocumentDetail.jsx  Home.jsx
frontend/src/services/: api.js
