[project]
name = "doc-insights-backend"
version = "0.1.0"
description = "FastAPI + Celery service for document understanding"
authors = [{ name = "Doc Insights", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "pydantic[email]>=2.8.0,<2.9.0",
    "pydantic-settings>=0.1.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0,<1.35.0",
    "pillow>=10.3.0,<11.0.0",
    "pytesseract>=0.3.10,<0.4.0",
    "pdfminer.six>=20231228",
    "python-docx>=1.1.0",
    "celery>=5.4.0,<5.5.0",
    "redis>=5.0.4,<5.1.0",
    "sentence-transformers>=3.0.1,<3.1.0",
    "chromadb>=0.5.3,<0.6.0",
    "sqlalchemy>=2.0.29,<2.1.0",
    "aiosqlite>=0.19.0,<0.20.0",
    "alembic>=1.13.1,<1.14.0",
    "tenacity>=8.2.3,<8.3.0",
    "python-dotenv>=1.0.1,<1.1.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2,<8.3.0",
    "httpx>=0.27.0,<0.28.0",
    "ruff>=0.5.2,<0.6.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
    